# bighealth_hackathon

./: .dockerignore  .gitignore  DockerFile  Dockerfile  Dockerfile.api  README.md  SETUP.md  build-image.sh  docker-compose.yml  docker-setup.sh  main.py  pyproject.toml  requirements.txt  setup_repo.py
config/: data_generation_config.yaml  model_config.yaml
data/raw/: external_factors.csv  sleep_data.csv  users.csv
models/: sleep_quality_model.pt  sleep_quality_model_metadata.json
models/model_cards/: DataDriftDetectorCard.md  SleepQualityModelCard.md  TransferLearningModelCard.md  sleep_quality_card.json  sleep_quality_card.md  sleep_quality_model.json  sleep_quality_model.md
n8n_workflows/: n8n-config.json
n8n_worklows/: sleep_data_processing.json
scripts/: analyze_enhanced_data.py  data_generation_script.py  generate-sample-data.py  generate_training_data.py  integrate_wearable_data.py  patch_feature_engineering.py  run_demo.py  run_enhanced_analytics.py  run_enhanced_demo.py  sleep_advisor.py  train_fixed_model.py  train_models.py  user-insights-generator.py  validate_models.py  visualize_wearable_data.py  wearable_pipeline.py
src/: __init__.py
src/api/: main.py  sleep_routes.py  user_profile_routes.py
src/config/: config_manager.py  data_generation_config.yaml  device_profiles.yaml  message_templates.json  model_config.yaml  recommendations_config.yaml
src/data_generation/: base_generator.py  external_factors_generator.py  sleep_data_generator.py  user_generator.py  wearable_data_generator.py
src/data_processing/: batch_processing.py  (+2 more)
(+48 files in other folders)
