[project]
name = "bighealth-hackathon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.104.0",
    "jupyter>=1.0.0",
    "matplotlib>=3.7.2",
    "numpy>=1.24.3",
    "pandas>=2.0.3",
    "pytest==7.4.0",
    "pytest-cov==4.1.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.1",
    "scikit-learn>=1.3.0",
    "seaborn>=0.12.2",
    "uvicorn>=0.23.2",
]
